--- a/date.html
+++ b/date.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1> Will You Go Out with Me? </h1>
+        <h1> Will You Be My Valentine?? </h1>
         <div class="cat-container" id="catContainer">
             <img src="https://i.redd.it/i1unzy2wpz311.png" alt="Cute Cat" class="cat-image" id="initialCatImage">
         </div>
@@ -31,9 +31,10 @@
             initialCatImage.parentElement.classList.add("hidden");
             newCatContainer.classList.remove("hidden");
 
-            responseDiv.textContent = "Yay! Can't wait to go out with you! 🌸";
+            responseDiv.textContent = "Yay! I love you! Click <a href="https://www.WordPress.com" target="_blank">here</a>🌸";
             responseDiv.classList.remove("hidden");
         });
     </script>
 </body>
 </html>
+
