--- a/date.html
+++ b/date.html
@@ -31,11 +31,12 @@
         initialCatImage.parentElement.classList.add("hidden");
         newCatContainer.classList.remove("hidden");
 
-        responseDiv.innerHTML = "Yay! I love you! Click <a href='https://www.wordpress.com' target='_blank'>here</a> 🌸";
+        responseDiv.innerHTML = "Yay! I love you! Click <a href='https://drive.google.com/file/d/1r_--yxp2xnjmQK8MHuMiOiLpaxGX4cYN/view?usp=sharing' target='_blank'>here</a> and <a href='https://www.saxo.com/dk/girl-with-the-louding-voice-the-pb-b-format_abi-dare_paperback_9781529359275?srsltid=AfmBOoqUFQKVe62zNrIVVgbcRzd-0VbDmT9XR0IXIhkukbuNY4ExOIAL' target='_blank'>here</a> 🌸";
         responseDiv.classList.remove("hidden");
     });
     </script>
 </body>
 </html>
+
 
 
